# computer_graphics_project

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  main.cpp
include/: Error.h  Shader.h  common.h
include/learnopengl/: filesystem.h  mesh.h  model.h  shader.h  shader_m.h  shader_s.h
include/rg/: Camera.h  Error.h  Shader.h  Texture2D.h  mesh.h  model.h
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/imgui/: CMakeLists.txt
resources/: program_state.txt
resources/objects/99-intergalactic_spaceship-obj/: Intergalactic_Spaceship-(Wavefront).mtl
resources/shaders/: 2.model_lighting.fs  bullet.fs  bullet.vs  explosion_ball.fs  explosion_ball.vs  fragmentShader.fs  hdr.fs  model_exploding.fs  model_exploding.gs  model_exploding.vs  model_lighting.fs  model_lighting.vs  sun_shader.vs  vertexShader.vs
shaders/: vertexShader.vs
src/: main.cpp
